APB-384 reads only hexvalues used as icons and declares font from Fontawesome module and icon class in css, removes loading complete Fontawesome css, fixes icons app_align_right wrong character and app_log syntax error, fixes css selector for icons in menu 8 and font height in menu 10 in admin app, fixes stat row 2 width css in app2 and stat row 1 width in common css, fixes icon sizes app2 settings image

--- a/apps/app2/css/app.css
+++ b/apps/app2/css/app.css
@@ -355,8 +355,8 @@
 	justify-content:space-between;
 	border: 1px solid;
 }
-#setting_paper_preview_header_image div,
-#setting_paper_preview_footer_image div{
+#setting_paper_preview_header_image > div,
+#setting_paper_preview_footer_image > div{
 	min-height: 69px;
 }
 #setting_paper_preview_footer_image{
@@ -467,7 +467,6 @@
 }
 #profile_main_stat_row2 div{
 	display:inline-block;
-	margin-inline-end: 0.3em;
 }
 #profile_main_btn_user_settings,
 #profile_main_btn_user_setting_likes,
